--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -1,7 +1,7 @@
 @import "bootstrap/bootstrap";
 
 @btn-font-weight: 300;
-@font-family-sans-serif: "Roboto", Helvetica, Arial, sans-serif;
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,700,300,600,400);
 
 body, label, .checkbox label {
 	font-weight: 300;
