--- a/resources/assets/sass/welcomepage.scss
+++ b/resources/assets/sass/welcomepage.scss
@@ -7,6 +7,11 @@ $header-links-color-onHover : #FFFFFF;
 
 $color-darkGreen : #203f15;
 
+$t-button-border-radius : 5px;
+$t-button-background-color-hover: #204f1F ;
+
+$error-color-border : #FF6347;
+
 @mixin box-shadow($horizontal, $vertical, $blur, $spread, $color)
 {
   box-shadow: $horizontal $vertical $blur $spread $color;
@@ -92,7 +97,7 @@ header {
 
 
 $banner-image-url : "../../site_images/talenthub.jpg";
-$banner-min-height : 800px;
+$banner-min-height : 700px;
 
 //Defining form style for banner
 $banner-form-text-color:#1a1a1a;
@@ -130,39 +135,47 @@ $banner-form-padding:5px;
 
     ul.nav-tabs
     {
+      border-color:rgba(0,0,0,0.75) !important;
       li
       {
         a
         {
-          color:$color-darkGreen !important;
+          color:#FFFFFF !important;
           font-size:14px;
           font-weight: 700;
-          background-color:rgba(255, 255, 255, .75) !important;
+          background-color:rgba(0, 0, 0, 0.40) !important;
         }
-        a:hover
+        a:hover,a:focus
         {
-          background-color:rgba(255, 255, 255, 0.95) !important;
+          background-color:rgba(0, 0, 0, 0.75) !important;
+          border-color:#000000 !important;
         }
       }
       li.active a
       {
-        background-color:rgba(255, 255, 255, 1) !important;
+        background-color:rgba(0, 0, 0, 0.75) !important;
+        border-color:#000000 !important;
       }
 
     }
   }
   .sign_in_container
   {
-    background:#FFFFFF;
+    background:rgba(0,0,0,0.50);
     padding:15px;
   }
   .form_container
   {
 
+    .error_form_validation
+    {
+      border:1px solid $error-color-border !important;
+    }
+
     label
     {
       font-size:12px;
-      color:$color-darkGreen;
+      color:#ffffff;
     }
     input,select
     {
@@ -180,13 +193,45 @@ $banner-form-padding:5px;
       width:auto;
       margin-right: 5px;
     }
+
+
+    .forget_div
+    {
+      float:right;
+    }
+    .forget_div a
+    {
+      padding:0px;
+      font-size: 12px;
+      color: #ffffff !important;
+    }
+
+    .t-button
+    {
+      color:#FFFFFF;
+      background: $background-color-darkGreen;
+      @include border-radius($t-button-border-radius);
+      border:none;
+      @include text-shadow(1px, 1px, 2px, 0px, rgba(0,0,0,0.25));
+    }
+    .t-button:hover,.t-button:focus,.t-button:visited
+    {
+      color:#FFFFFF;
+      background: $t-button-background-color-hover;
+    }
   }
 
   .tab-content
   {
-    background:#FFFFFF;
+    background:rgba(0,0,0,0.75);
     padding:15px;
     @include border-radius(5px);
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+    -moz-border-radius-topleft: 0px;
+    -moz-border-radius-topright: 0px;
+    -webkit-border-top-left-radius: 0px;
+    -webkit-border-top-right-radius: 0px;
   }
 }
 
