Commit before starting working over videos

--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -791,6 +791,16 @@ footer
         }
       }
     }
+
+
+    .video_container
+    {
+      max-height:250px;
+      height:250px;
+      width:auto;
+    }
+
+
   }
 }
 
