--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -793,11 +793,86 @@ footer
     }
 
 
-    .video_container
+    .video_container {
+      margin-top:25px;
+      margin-bottom: 25px;
+      .videos
+      {
+        max-height: 200px;
+        height: 200px;
+        width: 100%;
+        overflow: hidden;
+        border:2px solid $color-darkGreen;
+        position:relative;
+        margin-bottom: 15px;
+
+        img
+        {
+          min-height:100%;
+          width:auto;
+          margin:0px auto;
+          display: block;
+          text-align: center;
+        }
+        .play_button
+        {
+          position:absolute;
+          font-size: 50px;
+          color:#FFFFFF;
+          top:35%;
+          left:0px;
+          width:100%;
+          text-align: center;
+          font-weight: 400;
+          cursor:pointer;
+        }
+      }
+    }
+
+    .image_container
     {
-      max-height:250px;
-      height:250px;
-      width:auto;
+      margin-top:25px;
+      margin-bottom: 25px;
+      .images
+      {
+        max-height: 200px;
+        height: 200px;
+        width: 100%;
+        overflow: hidden;
+        border:2px solid $color-darkGreen;
+        position:relative;
+        margin-bottom: 15px;
+        img
+        {
+          min-height:100%;
+          height:100%;
+          width:auto;
+          margin:0px auto;
+          display: block;
+          text-align: center;
+        }
+      }
+    }
+
+    .video_modal_container
+    {
+      .modal
+      {
+        .modal-dialog
+        {
+          background:none !important;
+
+        }
+        .modal-body
+        {
+          text-align: center !important;
+          iframe
+          {
+            text-align: center;
+            margin: 0px auto;
+          }
+        }
+      }
     }
 
 
