--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -486,43 +486,48 @@ footer
     }
 
 
-    .about_container
-    {
+    .about_container {
       padding-top: 80px;
       height: 300px;
-      p
-      {
+      p {
         font-size: 16px;
         line-height: 180%;
         font-weight: 400;
-        @include text-shadow(0px,0px,10px,null, rgba(0,0,0,0.75));
-        color:#FFFFFF;
+        @include text-shadow(0px, 0px, 10px, null, rgba(0, 0, 0, 0.75));
+        color: #FFFFFF;
       }
-      p.about
-      {
+      p.about {
         margin-bottom: 25px;
       }
 
-      .request_recommendations_container
-      {
-        position:absolute;
-        bottom:5px;
-        left:15px;
-        .t-button
-        {
-          padding:10px 15px;
+      .request_recommendations_container {
+        position: absolute;
+        bottom: 5px;
+        left: 15px;
+        .t-button {
+          padding: 10px 15px;
         }
       }
-
-      .endorese_user_container
+      .visiting_user_operations
       {
         position:absolute;
         bottom:15px;
         right:15px;
-        font-size: 14px;
-        .t-button
+
+        .operation_button
         {
-          padding:10px 15px;
+          font-size: 14px;
+          margin-right:15px;
+          .t-button
+          {
+            padding:10px 15px;
+          }
+        }
+        .loading
+        {
+          width:30px;
+          height:auto;
+          vertical-align: middle;
         }
       }
     }
@@ -853,29 +858,6 @@ footer
         }
       }
     }
-
-    .video_modal_container
-    {
-      .modal
-      {
-        .modal-dialog
-        {
-          background:none !important;
-
-        }
-        .modal-body
-        {
-          text-align: center !important;
-          iframe
-          {
-            text-align: center;
-            margin: 0px auto;
-          }
-        }
-      }
-    }
-
-
   }
 }
 
@@ -950,6 +932,51 @@ footer
       width:auto;
       display: block;
       margin:0px auto;
+    }
+  }
+}
+
+//Modals containing Videos
+.video_modal_container
+{
+  .modal
+  {
+    .modal-dialog
+    {
+      background:none !important;
+
+    }
+    .modal-body
+    {
+      text-align: center !important;
+      iframe
+      {
+        text-align: center;
+        margin: 0px auto;
+      }
+    }
+  }
+}
+
+
+//Modals containing Images
+.image_modal_container
+{
+  background:rgba(0,0,0,0.5);
+  .modal
+  {
+    .modal-dialog
+    {
+      width:auto;
+      max-width: 90%;
+      .modal-body
+      {
+        img
+        {
+          width:100%;
+          height:auto;
+        }
+      }
     }
   }
 }
