--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -12,6 +12,9 @@ $color-cream : #f6f0d2;
 
 $error-color-border : #FF6347;
 
+
+$color-orange : rgba(255,125,0,1);
+
 $t-button-border-radius : 5px;
 $t-button-background-color-hover: #204f1F ;
 
@@ -53,6 +56,18 @@ p
 .small_loading_image
 {
   width:15px;
+}
+
+.badge
+{
+  font-size: 10px;
+  background:$color-orange;
+  color:$color-cream;
+  height:18px;
+  width:18px;
+  padding:4px;
+  line-height: 12px;
+  margin: 0px 5px;
 }
 
 
@@ -123,7 +138,7 @@ header {
     li.has-dropdown > a
     {
       display: inline-block;
-      width:80%;
+
       padding-right:5px;
     }
     li.has-dropdown .dropdown
@@ -183,6 +198,84 @@ header {
           border-top:1px solid $color-darkGreen;
         }
       }
+
+      .badge
+      {
+        font-size: 9px;
+        background:$color-orange;
+        color:$color-cream;
+        height:15px;
+        width:15px;
+        padding:2px;
+        line-height: 12px;
+      }
+
+      .dropdown-menu.notifications_container
+      {
+        width:300px;
+        a
+        {
+          display:block;
+          padding:0px !important;
+          .notification
+          {
+            padding:5px;
+            display:block;
+            .row
+            {
+              margin:0px -5px;
+              @for $i from 1 through 12
+              {
+                .col-xs-#{$i},.col-lg-#{$i}
+                {
+                  margin:0px -5px;
+                  padding:0px 5px;
+                }
+              }
+            }
+            .image_container
+            {
+              img
+              {
+                margin-left: 2px;
+                padding:1px !important;
+                border:1px solid #1a1a1a;
+              }
+            }
+            .notification_heading
+            {
+              font-size: 10px;
+              font-weight: 300;
+              margin: 0px;
+              padding:0px 5px;
+              white-space: normal;
+              strong
+              {
+                font-weight: 400;
+                font-size:11px;
+              }
+            }
+            .date
+            {
+              font-style: italic;
+              font-size: 8px;
+            }
+            .action
+            {
+              color:$color-orange;
+            }
+          }
+          .notification.read
+          {
+            background:rgba(0,0,0,0.2);
+          }
+          .notification.unread
+          {
+            background:rgba(0,0,0,0);
+          }
+        }
+      }
+
     }
     li.has-dropdown:hover
     {
@@ -197,7 +290,6 @@ header {
 
 footer
 {
-  margin-top: 50px;
   background:$background-color-darkGreen;
   @include box-shadow(-1px,-1px,5px,0px,rgba(0,0,0,0.75));
   padding:10px;
@@ -232,6 +324,7 @@ footer
 {
   margin-top:40px;
   min-height:550px;
+  padding-bottom:50px;
 }
 
 .nav-tabs
@@ -1021,6 +1114,48 @@ footer
           height:auto;
         }
       }
+    }
+  }
+}
+
+
+
+
+
+
+.static_pages_container
+{
+  background:url('../../site_images/talenthub.jpg') fixed;
+  background-size: cover;
+  margin-bottom: -60px;
+  padding-bottom: 55px;
+
+  .container
+  {
+    position:relative;
+    top: 25px;
+    background:rgba(0,0,0,0.75);
+    border:1px solid #1a1a1a;
+    h1
+    {
+      font-weight: 700;
+      font-size:28px;
+      color:#FFFFFF;
+      @include text-shadow(2px,2px,10px,null,rgba(0,0,0,1));
+    }
+    p
+    {
+      color:#FFFFFF;
+      font-size:16px;
+      font-weight: 300;
+      line-height: 180%;
+      @include text-shadow(2px,2px,10px,null,rgba(0,0,0,1));
+    }
+    ul,ol
+    {
+      color:#FFFFFF;
+      font-size: 16px;
+      line-height: 200%;
     }
   }
 }
