--- a/resources/assets/lib/css/main.css
+++ b/resources/assets/lib/css/main.css
@@ -22,6 +22,19 @@
   -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
   -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75); }
 
+.statistic_button, .references_button {
+  padding: 2px 15px;
+  font-size: 12px; }
+
+.add_more_club_school_information_button {
+  font-size: 16px;
+  padding: 10px 25px; }
+
+.save_cv_button {
+  padding: 15px 50px;
+  font-weight: 700;
+  font-size: 18px; }
+
 .form-control.t-button {
   color: #FFFFFF; }
 
@@ -788,6 +801,12 @@ footer {
         color: #f6f0d2; }
       .settings_container .container .short_form_container .form-group {
         margin-bottom: 0px; }
+      .settings_container .container .short_form_container ul.alert.alert-danger {
+        padding: 5px;
+        margin-bottom: 5px; }
+        .settings_container .container .short_form_container ul.alert.alert-danger li.alert {
+          padding: 5px;
+          margin-bottom: 5px; }
 
 
 /*# sourceMappingURL=main.css.map */
